--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 <body>
   <!-- Menu Overlay -->
   <div class="overlay" id="overlay">
-    
+    <!-- Nav Bar -->
+    <nav>
+      <ul>
+        <li id="nav-1"><a href="#home">Home</a></li>
+        <li id="nav-2"><a href="#about">About</a></li>
+        <li id="nav-3"><a href="#skills">Skills</a></li>
+        <li id="nav-4"><a href="#projects">Projects</a></li>
+        <li id="nav-5"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </div>
   <!-- Sections -->
   <section id="home"><a href="https://github.com/Saimun4u?tab=repositories" target="_blank">Saimun's Web Portfolios</a></section>
